hot fixes + collapse

--- a/public/common/css/pre_screen_candidate.css
+++ b/public/common/css/pre_screen_candidate.css
@@ -7,6 +7,8 @@
 
 }
 #preScreenInterviewSetBtn{
+    font-weight: bold;
+    padding: 10px 45px;
     background: #09ac58;
     color:#fff;
 }
